@@ -19,7 +19,7 @@ plugins {
     id 'net.ltgt.apt' version '0.21'
     id "info.solidsoft.pitest" version '1.6.0'
     id 'org.owasp.dependencycheck' version '6.2.2'
-    id 'au.com.dius.pact' version '4.2.8'
+    id 'au.com.dius.pact' version '4.2.10'
 }
 
 apply plugin: 'org.springframework.boot'
@@ -104,6 +104,12 @@ task functional(type: Test) {
     setClasspath(sourceSets.e2e.runtimeClasspath)
     include "uk/gov/hmcts/reform/sscs/functional/**"
     exclude "uk/gov/hmcts/reform/sscs/smoke/**"
+}
+
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 jacoco {
@@ -226,7 +232,7 @@ dependencyManagement {
         dependency group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.69'
 
         // resolves: CVE-2019-10101, CVE-2019-10102, CVE-2019-10103, CVE-2020-15824
-        dependencySet(group: 'org.jetbrains.kotlin', version: '1.5.21') {
+        dependencySet(group: 'org.jetbrains.kotlin', version: '1.5.30') {
             entry 'kotlin-stdlib'
             entry 'kotlin-stdlib-common'
             entry 'kotlin-stdlib-jdk8'
@@ -237,6 +243,7 @@ dependencyManagement {
         dependencySet(group: 'org.apache.tomcat.embed', version: '9.0.50') {
             entry 'tomcat-embed-core'
             entry 'tomcat-embed-el'
+            entry 'tomcat-annotations-api'
             entry 'tomcat-embed-websocket'
         }
 
@@ -304,6 +311,11 @@ dependencyManagement {
             entry 'cxf-rt-transports-http'
         }
 
+        //CVE-2021-35515, CVE-2021-35516, CVE-2021-35517, CVE-2021-36090
+        dependencySet(group: 'org.apache.commons', version: '1.21') {
+            entry 'commons-compress'
+        }
+
         imports {
             mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
         }
@@ -330,14 +342,9 @@ dependencies {
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign'
     compile group: 'org.springframework.retry', name: 'spring-retry', version: '1.3.1'
     compile group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
-    compile group: 'org.elasticsearch', name: 'elasticsearch', version: '7.13.4'
+    compile group: 'org.elasticsearch', name: 'elasticsearch', version: '7.14.0'
 
     compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '4.0.0'
-
-    // Added to fix CVE-2020-13934, CVE-2020-13935, CVE-2020-17527
-    compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.50'
-    compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.50'
-    compile group: 'org.apache.tomcat', name: 'tomcat-annotations-api', version: '10.0.8'
 
     // Safe to remove once Spring update their dependencies - see CVE-2019-14439 and add 'com.fasterxml.jackson.core' configurations.all above
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.3'
@@ -347,7 +354,7 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwagger
 
-    compile group: 'io.github.openfeign', name: 'feign-httpclient', version: '11.5'
+    compile group: 'io.github.openfeign', name: 'feign-httpclient', version: '11.6'
     compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.1'
 
     compile group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.4'
@@ -357,26 +364,24 @@ dependencies {
     compile group: 'uk.gov.hmcts.reform', name: 'document-management-client', version: '7.0.0'
 
     compile group: 'com.github.hmcts', name: 'sscs-common', version: '4.4.65-RC-SSCS-7821'
-    compile group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.4.40'
+    compile group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.4.41'
 
     compile group:'org.overviewproject', name: 'mime-types', version: '1.0.2'
 
+    compile 'javax.xml.bind:jaxb-api:2.3.1'
     testCompile group: 'io.rest-assured', name: 'rest-assured'
+    testCompile 'com.github.hmcts:fortify-client:1.2.1:all'
+
     compile "org.projectlombok:lombok:$versions.lombok"
     annotationProcessor "org.projectlombok:lombok:$versions.lombok"
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.11.2'
-    testCompile group: 'net.javacrumbs.json-unit', name: 'json-unit', version: '2.27.0'
-    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.11.2'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.12.4'
+    testCompile group: 'net.javacrumbs.json-unit', name: 'json-unit', version: '2.28.0'
+    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.12.4'
     testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
-    testCompile group: 'net.javacrumbs.json-unit', name: 'json-unit-fluent', version: '2.27.0'
+    testCompile group: 'net.javacrumbs.json-unit', name: 'json-unit-fluent', version: '2.28.0'
     testCompile group: 'io.github.artsok', name: 'rerunner-jupiter', version: '2.1.6'
-
-    // Added to fix CVE-2020-13934, CVE-2020-13935, CVE-2020-17527
-    testCompile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.50'
-    testCompile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.50'
-    testCompile group: 'org.apache.tomcat', name: 'tomcat-annotations-api', version: '10.0.8'
 
     testCompile 'pl.pragmatists:JUnitParams:1.1.1'
 
